packages/ui/styles/index.css
/* ... */
/**
 * ============================================================================================
 * Intent ui.
 * ============================================================================================
 */

@layer theme {
	@variant light {
		--bg: oklch(100% 0 0deg);
		--fg: oklch(21% 0.034 264.665deg);

		--border: oklch(91.2% 0.01 258.338deg);
		--input: oklch(87.2% 0.01 258.338deg);

		--ring: oklch(58.8% 0.158 241.966deg);

		--primary: oklch(68.5% 0.169 237.323deg);
		--primary-fg: oklch(100% 0 0deg);

		--primary-subtle: oklch(68.5% 0.169 237.323deg / 15%);
		--primary-subtle-fg: oklch(50% 0.134 242.749deg);

		--secondary: oklch(92.8% 0.006 264.531deg);
		--secondary-fg: oklch(13% 0.028 261.692deg);

		--overlay: oklch(100% 0 0deg);
		--overlay-fg: oklch(13% 0.028 261.692deg);

		--accent: oklch(92.8% 0.006 264.531deg);
		--accent-fg: oklch(13% 0.028 261.692deg);

		--muted: oklch(96.7% 0.003 264.542deg);
		--muted-fg: oklch(55.1% 0.027 264.364deg);

		--success: oklch(59.6% 0.145 163.225deg);
		--success-fg: oklch(100% 0 0deg);

		--success-subtle: oklch(69.6% 0.17 162.48deg / 15%);
		--success-subtle-fg: oklch(50.8% 0.118 165.612deg);

		--info-subtle: oklch(68.5% 0.169 237.323deg / 15%);
		--info-subtle-fg: oklch(50% 0.134 242.749deg);

		--warning: oklch(82.8% 0.189 84.429deg);
		--warning-fg: oklch(27.9% 0.077 45.635deg);

		--warning-subtle: oklch(82.8% 0.189 84.429deg / 20%);
		--warning-subtle-fg: oklch(55.5% 0.163 48.998deg);

		--danger: oklch(57.7% 0.245 27.325deg);
		--danger-fg: oklch(97.1% 0.013 17.38deg);

		--danger-subtle: oklch(63.7% 0.237 25.331deg / 15%);
		--danger-subtle-fg: oklch(50.5% 0.213 27.518deg);

		--navbar: oklch(99.5% 0.002 247.839deg);
		--navbar-fg: oklch(13% 0.028 261.692deg);

		--sidebar: oklch(98.5% 0.002 247.839deg);
		--sidebar-fg: oklch(13% 0.028 261.692deg);
		--sidebar-primary: oklch(68.5% 0.169 237.323deg / 15%);
		--sidebar-primary-fg: oklch(50% 0.134 242.749deg);
		--sidebar-accent: oklch(92.8% 0.006 264.531deg);
		--sidebar-accent-fg: oklch(13% 0.028 261.692deg);
		--sidebar-border: oklch(90.2% 0.01 258.338deg);
		--sidebar-ring: oklch(58.8% 0.158 241.966deg);

		--chart-1: oklch(58.8% 0.158 241.966deg);
		--chart-2: oklch(68.5% 0.169 237.323deg);
		--chart-3: oklch(74.6% 0.16 232.661deg);
		--chart-4: oklch(82.8% 0.111 230.318deg);
		--chart-5: oklch(90.1% 0.058 230.902deg);

		--radius-lg: 0.5rem;
		--radius-xs: calc(var(--radius-lg) * 0.25);
		--radius-sm: calc(var(--radius-lg) * 0.5);
		--radius-md: calc(var(--radius-lg) * 0.75);
		--radius-xl: calc(var(--radius-lg) * 1.5);
		--radius-2xl: calc(var(--radius-lg) * 2);
		--radius-3xl: calc(var(--radius-lg) * 3);
		--radius-4xl: calc(var(--radius-lg) * 4);
	}

	@variant dark {
		--bg: oklch(17% 0.028 261.692deg);
		--fg: oklch(98.5% 0.002 247.839deg);

		--border: oklch(27.3% 0.034 259.733deg);
		--input: oklch(31.3% 0.034 259.733deg);

		--ring: oklch(58.8% 0.158 241.966deg);

		--primary: oklch(68.5% 0.169 237.323deg);
		--primary-fg: oklch(100% 0 0deg);

		--primary-subtle: oklch(68.5% 0.169 237.323deg / 10%);
		--primary-subtle-fg: oklch(82.8% 0.111 230.318deg);

		--secondary: oklch(24.8% 0.033 256.848deg);
		--secondary-fg: oklch(98.5% 0.002 247.839deg);

		--overlay: oklch(21% 0.034 264.665deg);
		--overlay-fg: oklch(98.5% 0.002 247.839deg);

		--accent: oklch(27.8% 0.033 256.848deg);
		--accent-fg: oklch(98.5% 0.002 247.839deg);

		--muted: oklch(21% 0.034 264.665deg);
		--muted-fg: oklch(70.7% 0.022 261.325deg);

		--success: oklch(59.6% 0.145 163.225deg);
		--success-fg: oklch(100% 0 0deg);

		--success-subtle: oklch(69.6% 0.17 162.48deg / 10%);
		--success-subtle-fg: oklch(76.5% 0.177 163.223deg);

		--info-subtle: oklch(68.5% 0.169 237.323deg / 10%);
		--info-subtle-fg: oklch(82.8% 0.111 230.318deg);

		--warning: oklch(82.8% 0.189 84.429deg);
		--warning-fg: oklch(27.9% 0.077 45.635deg);

		--warning-subtle: oklch(82.8% 0.189 84.429deg / 10%);
		--warning-subtle-fg: oklch(82.8% 0.189 84.429deg);

		--danger: oklch(57.7% 0.245 27.325deg);
		--danger-fg: oklch(97.1% 0.013 17.38deg);

		--danger-subtle: oklch(63.7% 0.237 25.331deg / 10%);
		--danger-subtle-fg: oklch(70.4% 0.191 22.216deg);

		--navbar: oklch(19% 0.034 264.665deg);
		--navbar-fg: oklch(98.5% 0.002 247.839deg);

		--sidebar: oklch(18% 0.034 264.665deg);
		--sidebar-fg: oklch(98.5% 0.002 247.839deg);
		--sidebar-primary: oklch(68.5% 0.169 237.323deg / 10%);
		--sidebar-primary-fg: oklch(82.8% 0.111 230.318deg);
		--sidebar-accent: oklch(27.8% 0.033 256.848deg);
		--sidebar-accent-fg: oklch(98.5% 0.002 247.839deg);
		--sidebar-border: oklch(27.8% 0.033 256.848deg);
		--sidebar-ring: oklch(58.8% 0.158 241.966deg);

		--chart-1: oklch(50% 0.134 242.749deg);
		--chart-2: oklch(68.5% 0.169 237.323deg);
		--chart-3: oklch(74.6% 0.16 232.661deg);
		--chart-4: oklch(82.8% 0.111 230.318deg);
		--chart-5: oklch(90.1% 0.058 230.902deg);
	}
}
/* ... */

